docs/k8s/Automated Service Mesh with Istio/02-02/hostname-virtualservice-subset.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hostname
spec:
  hosts:
  - "hostname.example.com"
  gateways:
  - hostname-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: hostname
        subset: v1
